--- a/index.css
+++ b/index.css
@@ -37,6 +37,11 @@ button {
     background-color: #AC485A;
 }
 
+button:hover {
+    background-color: #432000;
+    cursor: pointer;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
@@ -53,4 +58,9 @@ ul li {
     flex-grow: 1;
     text-align: center;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+}
+
+ul li:hover {
+    background-color: #FFECC7;
+    cursor: pointer;
 }
