--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
-    background-color: #EEF0F4;
+    background-color: white;
     color: #432000;
     user-select: none;
 }
@@ -10,8 +10,8 @@ html, body {
 .container {
     display: flex;
     flex-direction: column;
-    max-width: 320px;
     margin: 30px auto;
+    width: 60%;
 }
 
 img {
@@ -22,7 +22,7 @@ img {
 input {
     color: #432000;
     background-color: #DCE1EB;
-    margin: 10px 0;
+    margin: 15px 0;
 }
 
 input, button {
@@ -36,17 +36,18 @@ input, button {
 
 button {
     color: #FDFDFD;
-    background-color: #AC485A;
+    background-color: #92B4EC;
 }
 
 button:hover {
-    background-color: #432000;
+    background-color: #92B4EC;
     cursor: pointer;
 }
 
 ul {
     list-style-type: none;
     padding: 0;
+    color: #4183d7;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -59,7 +60,8 @@ ul li {
     border-radius: 8px;
     flex-grow: 1;
     text-align: center;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    border: 1px solid;
 }
 
 ul li:hover {
