Add new colors and an icon to the important task button Star icon can now be pressed to make a task important. Important tasks will be pink and turn back to white if the star icon is pressed again. Button hover style was removed and text was also made white on important tasks for better visibility.

--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ button {
 }
 
 button:hover {
-    background-color: #92B4EC;
+    /* background-color: #92B4EC; */
     cursor: pointer;
 }
 
@@ -65,20 +65,23 @@ ul li {
 }
 
 ul li:hover {
-    background-color: #FFECC7;
+    /* background-color: #FFECC7; */
     cursor: pointer;
 }
 
-.prioritize {
-    color: red;
+.prioritize button, .un-prioritize button {
+    background-color: transparent;
+}
+.prioritize i, .important {
+    color: white;
 }
 
-.unprioritize {
-    color: blue;
+.un-prioritize i {
+    color: #ec92a3;
 }
 
 .important {
-    background-color: pink;
+    background-color: #ec92a3;
 }
 
 @media screen and (min-width: 480px) {
