Add background color to input element

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ img {
 
 input {
   color: #432000;
+  background-color: #c9cfdb;
   margin: 15px 0;
 }
 
@@ -65,6 +66,13 @@ ul li:hover {
   cursor: pointer;
 }
 
+i {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 15px;
+}
+
 .prioritize button, .un-prioritize button {
   background-color: transparent;
   padding: 0;
@@ -77,13 +85,6 @@ ul li:hover {
 
 .un-prioritize i {
   color: #ec92a3;
-}
-
-i {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 15px;
 }
 
 .important {
