--- a/variables.scss
+++ b/variables.scss
@@ -5,6 +5,7 @@ $color-cream: #FFFDF8;
 $color-blue: #92B4EC;
 $color-input: #432000;
 $color-white: white;
+$color-grey: #c9cfdb;
 
 $color-important: $color-pink;
 $color-task-font: $color-blue;
@@ -12,6 +13,7 @@ $color-unimportant: $color-cream;
 $color-button-background: $color-blue;
 $color-background: $color-white;
 $color-button-font: $color-white;
+$color-input-background: $color-grey;
 
 // Fonts
 $font-size-text: 20px;
